<resources>
    <string name="app_name">10117118_IF3_WisataBandung</string>
    <string name="wisata">Wisata</string>
    <string name="profil_pembuat">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nama_wisata">Nama Wisata</string>
    <string name="kategori_wisata">kategori wisata</string>
    <string name="alamat_wisata">alamat_wisata</string>
    <string name="tentan_aplikasi">Tentang Aplikasi</string>
    <string name="deskripsi">Mahasiswa semester 6 jurusan Teknik Informatika di Universitas Komputer Indonesia Kota Bandung</string>
    <string name="fungsi">FUNGSI</string>
    <string name="fungsi_pertama">Menampilkan daftar wisata</string>
    <string name="kategori">Kategori</string>
    <string name="buka">Buka:</string>
    <string name="jam_operasional">Jam Operasional:</string>
    <string name="_8am_8pm">8AM-8PM</string>
    <string name="senin_minggu">Senin-Minggu</string>
    <string name="maps">Maps</string>
    <string name="keterangan_aplikasi">Menampilkan tempat wisata di wilayah Bandung</string>
    <string name="menampilkan_lokasi_tempat_wisata">Menampilkan lokasi tempat wisata</string>
    <string name="keterangan_disini">keterangan disini</string>
    <string name="title_activity_maps">Map</string>
    <string name="email_menu_kontak">alfan.wahyudi98@gmail.com</string>
    <string name="noTelepon">085284584219</string>
    <string name="instagram_name">alfan.id</string>
    <string name="email">Email</string>
    <string name="ig">Instagram</string>
    <string name="telepon">Telepon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kontak_pembuat">Kontak</string>
    <string name="nama">Alfan Wahyudi</string>
</resources>
