<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wisata">

    <fragment
        android:id="@+id/navigation_wisata"
        android:name="com.example.tugas_uas_akb_if3_10117118.ui.wisata.wisataFragment"
        android:label="@string/wisata"
        tools:layout="@layout/wisata_fragment" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.tugas_uas_akb_if3_10117118.ui.maps.mapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/maps_fragment" />

    <fragment
        android:id="@+id/navigation_profilPembuat"
        android:name="com.example.tugas_uas_akb_if3_10117118.ui.profilPembuat.profilPembuatFragment"
        android:label="@string/profil_pembuat"
        tools:layout="@layout/profil_pembuat_fragment" />
</navigation>
