<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wisata.DetailWisata">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/detailgambarwisata"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@mipmap/ic_launcher"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginStart="15dp">
                <TextView
                    android:id="@+id/detail_nama_wisata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_wisata"
                    android:textColor="@color/textPrimary"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"/>
                <TextView
                    android:id="@+id/detail_kategori"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori"
                    android:textSize="10sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/textSecondary"/>

                <TextView
                    android:id="@+id/detail_alamat"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/alamat_wisata"
                    android:textColor="@color/textPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/buttonMaps"
                android:layout_width="68dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_undraw_maps"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_height="1.5dp"
            android:background="@color/textSecondary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginStart="25dp">
            <TextView
                android:layout_width="37dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/buka"
                android:textStyle="bold"
                android:textColor="@color/textPrimary"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/detail_hari_buka"
                android:layout_width="85dp"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:text="@string/senin_minggu"
                android:textColor="@color/textPrimary"
                android:textSize="13sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="25dp">
            <TextView
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:text="@string/jam_operasional"
                android:textColor="@color/textPrimary"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/detail_jam_operasional"
                android:layout_width="85dp"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:text="@string/_8am_8pm"
                android:textColor="@color/textPrimary"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/detail_keterangan"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:text="@string/keterangan_disini" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>