<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="#33E2E6E6"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             >
            <ImageView
                android:id="@+id/gambar_wisata"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <TableRow>
                        <TextView
                            android:id="@+id/nama_wisata"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/textPrimary"
                            android:text="@string/nama_wisata"
                            android:textSize="15sp"/>
                    </TableRow>
                    <TableRow>
<!--                        <TextView-->
<!--                            android:text="kategori"-->
<!--                            android:textStyle="bold"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:textSize="12sp"/>-->
                        <TextView
                            android:id="@+id/kategori"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/kategori_wisata"
                            android:textSize="10sp"/>
                    </TableRow>
                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TableRow>

                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:text="@string/buka"
                                android:textColor="@color/textPrimary"
                                android:textSize="11sp"
                                android:fontFamily="sans-serif"/>

                            <TextView
                                android:id="@+id/hari_buka"
                                android:layout_width="85dp"
                                android:layout_height="wrap_content"
                                android:text="@string/senin_minggu"
                                android:textSize="11sp" />
                        </TableRow>
                    </TableLayout>
                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp">
                        <TableRow>

                            <TextView
                                android:layout_width="90dp"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="@string/jam_operasional"
                                android:textColor="@color/textPrimary"
                                android:textSize="11sp" />
                            <TextView
                                android:id="@+id/jam_operasional"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_8am_8pm"
                                android:textSize="11sp"/>
                        </TableRow>
                    </TableLayout>
                    <TableRow>

                        <TextView
                            android:id="@+id/alamat"
                            android:layout_width="245dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/alamat_wisata"
                            android:textColor="@color/textPrimary"
                            android:textSize="11sp" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>